--- a/assets/scss/system/common/_button.scss
+++ b/assets/scss/system/common/_button.scss
@@ -150,6 +150,7 @@
         background-repeat: no-repeat;
         background-position: center -100%;
         transition: 1s;
+        z-index: 10;
         &:hover {
             background-position: center 99%;
              border: 1px solid var(--button-filled-bg-hover);
