--- a/assets/scss/system/helpers/_typography.scss
+++ b/assets/scss/system/helpers/_typography.scss
@@ -134,6 +134,7 @@ body {
 // text-editor
 .redactor {
     img {
+        width: 100% !important;
         max-width: 100%;
         overflow: hidden;
     }
@@ -279,4 +280,11 @@ body {
 }
 .italic {
     font-style: italic;
+}
+.hr{
+    width: 100%;
+    height: 1px;
+    display: block;
+    border-bottom: 1px solid var(--border-light);
+    margin: var(--text-editor-body-padding-y-lg, 32px) 0px;
 }
