--- a/assets/scss/system/helpers/_icons.scss
+++ b/assets/scss/system/helpers/_icons.scss
@@ -226,7 +226,7 @@
 .icon-file-download-light:before {
     content: "\e83d";
 } /* '' */
-.icon-insragram:before {
+.icon-instagram:before {
     content: "\e83e";
 } /* '' */
 .icon-folder:before {
