--- a/assets/scss/system/components/form/_form-fields.scss
+++ b/assets/scss/system/components/form/_form-fields.scss
@@ -32,7 +32,7 @@
     }
     .field-title {
         display: block;
-        font-size: var(--typography-form-label-font-size-font-size-lg);
+        font-size: var(--typography-form-label-font-size-lg);
         padding-bottom: var(--form-label-padding-y-lg);
     }
 }
@@ -68,7 +68,7 @@
         padding: var(--form-input-padding-y-md);
     }
     .field-title {
-        font-size: var(--typography-form-label-font-size-font-size-md);
+        font-size: var(--typography-form-label-font-size-md);
         padding-bottom: var(--form-label-padding-y-md);
     }
 }
@@ -104,7 +104,7 @@
         padding: var(--form-input-padding-y-sm);
     }
     .field-title {
-        font-size: var(--typography-form-label-font-size-font-size-sm);
+        font-size: var(--typography-form-label-font-size-sm);
         padding-bottom: var(--form-label-padding-y-sm);
     }
 }
@@ -144,6 +144,7 @@
         font-style: normal;
         font-weight: 500;
         line-height: 120%;
+        display: block;
         text-transform: uppercase;
     }
 
@@ -389,6 +390,7 @@
         align-items: flex-start;
         gap: var(--modal-header-gap-sm);
         align-self: stretch;
+        justify-content: space-between;
         // background: var(--alert-success-bg-light);
         h3 {
             // color: var(--alert-success-text);
