--- a/assets/scss/system/helpers/_icons.scss
+++ b/assets/scss/system/helpers/_icons.scss
@@ -49,10 +49,10 @@
 .icon-telegram:before {
     content: "\e802";
 } /* '' */
-.icon-tiktok:before {
+.icon-tiktok-1:before {
     content: "\e803";
 } /* '' */
-.icon-tiktok-simple:before {
+.icon-tiktok:before {
     content: "\e804";
 } /* '' */
 .icon-top-bottom:before {
@@ -226,7 +226,7 @@
 .icon-file-download-light:before {
     content: "\e83d";
 } /* '' */
-.icon-instagram:before {
+.icon-insragram:before {
     content: "\e83e";
 } /* '' */
 .icon-folder:before {
@@ -241,7 +241,7 @@
 .icon-file-download:before {
     content: "\e842";
 } /* '' */
-.icon-linkedin-simple:before {
+.icon-linkedin:before {
     content: "\e843";
 } /* '' */
 .icon-link:before {
@@ -253,7 +253,7 @@
 .icon-list:before {
     content: "\e847";
 } /* '' */
-.icon-insragram-light:before {
+.icon-instagram:before {
     content: "\e848";
 } /* '' */
 .icon-mail-line:before {
@@ -289,7 +289,7 @@
 .icon-plus:before {
     content: "\e853";
 } /* '' */
-.icon-play-filled:before {
+.icon--play-filled:before {
     content: "\e854";
 } /* '' */
 .icon-pin:before {
@@ -307,3 +307,6 @@
 .icon-check-c:before {
     content: "\e859";
 } /* '' */
+.icon-linkedin-1:before {
+    content: "\e85a";
+} /* '' */
